Changing one text property.

--- a/sampleMobileOffChat/_c8oProject/mobilePages/Lobby.yaml
+++ b/sampleMobileOffChat/_c8oProject/mobilePages/Lobby.yaml
@@ -117,7 +117,7 @@ title: Title for Lobby
               - MobileSmartSourceType: |
                   '{
                    "mode": "plain",
-                   "value": "OffChat Lobby"
+                   "value": "Lobby"
                   }'
     ↓ButtonSet [mobile.components.UIDynamicElement-1518088441378]: 
       beanData: |
