--- a/sampleMobileOffChat/sampleMobileOffChat.yaml
+++ b/sampleMobileOffChat/sampleMobileOffChat.yaml
@@ -1895,7 +1895,7 @@
                       - MobileSmartSourceType: |
                           '{
                            "mode": "plain",
-                           "value": "OffChat Lobby"
+                           "value": "Lobby"
                           }'
             ↓ButtonSet [mobile.components.UIDynamicElement-1518088441378]: 
               beanData: |
