Change some MB values.

--- a/sampleMobileOffChat/_c8oProject/mobilePages/Lobby.yaml
+++ b/sampleMobileOffChat/_c8oProject/mobilePages/Lobby.yaml
@@ -200,6 +200,10 @@ title: Title for Lobby
                   "ButtonType": {
                    "mode": "plain",
                    "value": "ion-item"
+                  },
+                  "IonColor": {
+                   "mode": "plain",
+                   "value": "light"
                   }
                  }
                 }'
